//package edu.drexel.TrainDemo.trips.models;
//
//import edu.drexel.TrainDemo.trips.models.entities.TripEntity;
//
//import javax.persistence.Entity;
//import javax.persistence.OneToMany;
//
//@Entity(name = "route")
//public class RouteModel {
//
//
//    private TripEntity trip;
//
//    @OneToMany
//    private Station stops;
//
//    protected RouteModel() {
//    }
//
//}